--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "main.cpp" "blink.cpp" "temp.cpp")
+idf_component_register(SRCS "main.cpp" "blink.cpp" "temp.cpp" "display.cpp" "webinterface.cpp")
