added filesystem for website

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,11 +11,15 @@
 platform = espressif32
 framework = arduino, espidf
 board = esp32dev
-build_flags = -D CONFIG_BLINK_GPIO=2
+build_flags = -D ESP32
 monitor_speed = 115200
 ;upload_speed = 115200
 upload_port = COM[8]
 monitor_port = COM[8]
+board_build.partitions = partitions_custom.csv
+
+# using the latest stable version
+lib_deps = ESP Async WebServer
 
 platform_packages =
   ; use a special branch
