Setup Sliders Implemented

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 platform = espressif32
 framework = arduino, espidf
 board = esp32dev
-build_flags = -D ESP32 -I include/GUI
+build_flags = -D ESP32 -I include/GUI -I include/GUI/icons
 monitor_speed = 115200
 ;upload_speed = 115200
 upload_port = COM[3]
