added OTA Firmware Upload

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,19 @@ platform = espressif32
 framework = arduino, espidf
 board = esp32dev
 build_flags = -D ESP32 -I include/GUI
-monitor_speed = 115200
+
 ;upload_speed = 115200
 upload_port = COM[3]
 monitor_port = COM[3]
+monitor_speed = 115200
+
+board_build.partitions = partitions_custom.csv
+
+;upload_protocol = espota
+;upload_port = 192.168.1.32
 
 # using the latest stable version
-lib_deps = ESP Async WebServer
+lib_deps = TelnetStream2
 
 platform_packages =
   ; use a special branch
